cluster/homelab/apps/stirlingpdf/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirlingpdf-internal
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Swiss Army Knife For PDFs
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: stirling-pdf
    gethomepage.dev/name: Stirling-PDF
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "pdf.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirlingpdf-stirling-pdf-chart
          port: 8080
